# ctx-cache-compressor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: linux-release.yml
deploy/config/: prod-1000.toml  prod.toml
deploy/systemd/: ctx-cache-compressor.env.example  ctx-cache-compressor.service
docs/: api-observability-map.md  project-overview.md  project-overview.zh-CN.md  skills-catalog.yaml  skills-governance.md
scripts/: append_load.lua  build_compression_test_samples.py  build_user_assistant_jsonl.py  evaluate_real_jsonl_summaries.py  load_test.sh  logs.sh  package_release.sh  replay_test_sample.py  replay_with_io_log.py  run_release.sh  send_project_dayapp_push.py  smoke.sh  source_env.sh  start_bg.sh  stop_bg.sh  test_suite.sh
src/: config.rs  error.rs  lib.rs  main.rs  runtime.rs
src/api/: dto.rs  mod.rs  routes.rs
src/api/handlers/: append.rs  ctx_cache_compressor_playground.rs  dashboard.rs  demo.rs  fetch.rs  health.rs  mod.rs  playground_example.rs  session.rs
src/compression/: compressor.rs  mod.rs  prompt.rs  scheduler.rs  trigger.rs
src/llm/: client.rs  mod.rs  runtime_client.rs  types.rs
src/session/: mod.rs  store.rs  turn.rs  types.rs  validator.rs
static/: ctx-cache-compressor-playground.html  dashboard.html  playground-example.html
tests/: integration.rs
